test_yuriiq/catalog/language/english/product/product.php
<?php

// reviews
$_['reviews_login']	= 'You must be registered to comment.';

// text
$_['text_error']	= 'Product not found!';
$_['text_weight']	= 'Weight:';
$_['text_tags']	= 'Tags:';
$_['text_share']	= 'Share';
$_['text_instock']	= 'In Stock';
$_['text_payment_profile']	= 'Payment Profiles';
$_['text_write']	= 'Write a review';
$_['text_brand']	= 'Brand';
$_['text_day']	= 'day';
$_['text_wait']	= 'Please Wait!';
$_['text_reward']	= 'Reward Points:';
$_['text_model']	= 'Product Code:';
$_['text_month']	= 'month';
$_['text_week']	= 'week';
$_['text_payment_description']	= '%s every %d %s(s) for %d payment(s)';
$_['text_manufacturer']	= 'Brand:';
$_['text_trial_description']	= '%s every %d %s(s) for %d payment(s) then';
$_['text_points']	= 'Price in reward points:';
$_['text_stock']	= 'Availability:';
$_['text_option']	= 'Available Options';
$_['text_success']	= 'Thank you for your review. It has been submitted to the webmaster for approval.';
$_['text_or']	= '- OR -';
$_['text_minimum']	= 'This product has a minimum quantity of %s';
$_['text_on']	= ' on ';
$_['text_discount']	= '%s or more %s';
$_['text_note']	= '<span style="color: #FF0000;">Note:</span> Reviews are published without pre-moderation. Be polite, please!';
$_['text_year']	= 'year';
$_['text_dimension']	= 'Dimensions (L*W*H):';
$_['text_semi_month']	= 'half-month';
$_['text_payment_until_canceled_description']	= '%s every %d %s(s) until canceled';
$_['text_upload']	= 'Your file was successfully uploaded!';
$_['text_search']	= 'Search';
$_['text_tax']	= 'Ex Tax:';
$_['text_qty']	= 'Qty:';
$_['text_reviews']	= 'Reviews';
$_['text_price']	= 'Price:';
$_['text_no_reviews']	= 'There are no reviews for this product.';

// error
$_['error_captcha']	= 'Warning: Verification code does not match the image!';
$_['error_upload']	= 'Upload required!';
$_['error_filetype']	= 'Invalid file type!';
$_['error_name']	= 'Warning: Review Name must be between 3 and 25 characters!';
$_['error_text']	= 'Warning: Review Text must be between 25 and 1000 characters!';
$_['error_rating']	= 'Warning: Please select a review rating!';
$_['error_filename']	= 'Filename must be between 3 and 64 characters!';

// basic
$_['basic_attribute']	= 'Basic parameters';

// button
$_['button_edit_product']	= 'Edit product';

// admin
$_['admin_author']	= 'Management response';

// entry
$_['entry_rating']	= 'Rating:';
$_['entry_review']	= 'Your Review:';
$_['entry_bad']	= 'Bad';
$_['entry_good']	= 'Good';
$_['entry_name']	= 'Your Name:';
$_['entry_captcha']	= 'Enter the code in the box below:';

// tab
$_['tab_blog_related']	= 'Blog';
$_['tab_downloads']	= 'Downloads';
$_['tab_related']	= 'Related Products';
$_['tab_review']	= 'Reviews';
$_['tab_description']	= 'Description';
$_['tab_related2']	= 'Similar';
$_['tab_attribute']	= 'Specification';
?>